--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,15 +1,15 @@
-version: "3.8"
+version: '3.8'
 
 services:
   mysql:
     image: mysql:8.0
-    container_name: emp_mysql
+    container_name: emp_mysql_prod
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_NAME}
-    ports:
-      - "${DB_PORT}:3306"
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
@@ -19,64 +19,36 @@ services:
       timeout: 20s
       retries: 10
 
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: emp_phpmyadmin
-    restart: always
-    environment:
-      PMA_HOST: mysql
-      PMA_PORT: 3306
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-    ports:
-      - "8080:80"
-    depends_on:
-      mysql:
-        condition: service_healthy
-    networks:
-      - emp_network
-
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
-    container_name: emp_backend
+      dockerfile: Dockerfile.prod
+    container_name: emp_backend_prod
     restart: always
     depends_on:
       mysql:
         condition: service_healthy
-    ports:
-      - "3001:3001"
     environment:
+      - PORT=3001
       - DB_HOST=localhost
       - DB_PORT=3307
       - DB_USER=root
       - DB_PASSWORD=rootpassword
       - DB_NAME=employee_db
       - JWT_SECRET=supersecretkey123
-      - PORT=3001
-    volumes:
-      - ./backend:/usr/src/app
-      - /usr/src/app/node_modules
     networks:
       - emp_network
-    command: npm run start:dev
 
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
-    container_name: emp_frontend
+      dockerfile: Dockerfile.prod
+    container_name: emp_frontend_prod
     restart: always
     ports:
-      - "5173:5173"
-    environment:
-      - VITE_API_URL=http://localhost:3001
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      - "80:80"
     networks:
       - emp_network
-    command: npm run dev -- --host
 
 networks:
   emp_network:
